--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .menu {
       background: rgb(252, 251, 248);
       position: fixed; /* Position the menu fixed */
-      top: 0; /* Position the menu at the sdasdastop */
+      top: 0; /* Position the menu at the sdasdasádasdtop */
       z-index: 1;
     }
     
